<resources>
    <string name="app_name">Movie App</string>

    <string name="title_bottom_nav_bar_1">Home</string>
    <string name="title_bottom_nav_bar_2">Search</string>
    <string name="title_bottom_nav_bar_3">Favorites</string>
    <string name="title_bottom_nav_bar_4">Settings</string>

    <string name="tab_title_1">MOVIES</string>
    <string name="tab_title_2">TV SHOWS</string>

    <string name="button_see_all">SEE ALL</string>

    <string name="title_trending">Trending this week</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_top_rated_movies">Top Rated Movies</string>
    <string name="title_in_theatres">In Theatres</string>
    <string name="title_upcoming_movies">Upcoming Movies</string>

    <string name="trending_trailer_button">Watch trailer</string>
    <string name="trending_trailer_error">No trailer found</string>

    <string name="title_popular_tvs">Popular TV Shows</string>
    <string name="title_top_rated_tvs">Top Rated TV Shows</string>
    <string name="title_airing_tvs">Airing</string>
    <string name="title_airing_day">Today</string>
    <string name="title_airing_week">This Week</string>

    <string name="title_genres">Genres</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_people">People</string>

    <string name="bullet_point">•</string>
    <string name="thousand_separator">,</string>

    <string name="hour_short">hr</string>
    <string name="minute_short">min</string>

    <string name="detail_summary">Summary</string>
    <string name="detail_director">Director</string>
    <string name="detail_writers">Writers</string>
    <string name="detail_title_trailers">Trailers</string>
    <string name="detail_title_cast">Cast</string>
    <string name="detail_title_images">Images</string>
    <string name="detail_title_details">Details</string>
    <string name="detail_title_recommended_movies">Recommended Movies</string>
    <string name="detail_title_networks">Networks</string>

    <string name="detail_original_title">Original Title</string>
    <string name="detail_release_date">Release Date</string>
    <string name="detail_runtime">Runtime</string>
    <string name="detail_vote_count">User Vote Count</string>
    <string name="detail_vote_average">User Score</string>
    <string name="detail_spoken_language">Spoken Language</string>
    <string name="detail_budget">Budget</string>
    <string name="detail_revenue">Revenue</string>
    <string name="detail_production_company">Production Company</string>
    <string name="detail_production_country">Production Country</string>
    <string name="detail_status">Status</string>
    <string name="detail_genre">Genre</string>

    <string name="detail_creators">Creators</string>
    <string name="detail_title_seasons">Seasons</string>
    <string name="detail_title_recommended_tvs">Recommended TV Shows</string>
    <string name="detail_title_next_episode">Next Episode</string>
    <string name="detail_body_next_episode">Season %d, Episode %d</string>

    <string name="detail_first_air_date">First Episode Release Date</string>
    <string name="detail_last_air_date">Last Episode Release Date</string>
    <string name="detail_episode_runtime">Episode Runtime</string>
    <string name="detail_in_production">In Production</string>
    <string name="detail_networks">Available On</string>
    <string name="detail_season_episodes">%d episodes</string>

    <string name="detail_season_and_episode_number">S%dE%d</string>
    <string name="detail_title_episodes">Episodes</string>
    <string name="detail_title_guest_stars">Guest Stars</string>

    <string name="detail_title_movie_credits">Movies</string>
    <string name="detail_title_tv_credits">TV Shows</string>
    <string name="title_as_cast">As Cast</string>
    <string name="title_as_crew">As Crew</string>

    <string name="detail_birthday">Birthday</string>
    <string name="detail_current_age">" (%d years old)"</string>
    <string name="detail_birthplace">Birthplace</string>
    <string name="detail_biography">Biography</string>
    <string name="detail_deathday">Deathday</string>
    <string name="detail_death_age">" (at the age of %d)"</string>
    <string name="detail_gender">Gender</string>
    <string name="detail_job">Known For</string>
    <string name="detail_also_known_as">Also Known As</string>

    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_non_binary">Non-binary</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="n_a">N/A</string>

    <string name="empty_favorites_list_movie">Your favorite movies list is empty</string>
    <string name="empty_favorites_list_tv">Your favorite TV shows list is empty</string>

    <string name="snackbar_removed_item">Removed from favorites</string>
    <string name="snackbar_action_undo">UNDO</string>

    <string name="error_connection">Unable to fetch data, please check your internet connection and try again.</string>
    <string name="error_service">API service is not responding at the moment, please try again later.</string>
    <string name="error_unknown">Unknown error occurred.</string>
    <string name="button_retry">RETRY</string>

    <string name="tmdb_attribution_title">Attribution</string>
    <string name="tmdb_attribution_message">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>
    <string name="tmdb_attribution_button_text">GOT IT</string>

    <string name="item_count">" (%d)"</string>
    <string name="item_count_s">" (%s)"</string>
    <string name="title_see_all_search">\"%s\" (%d)</string>

    <string name="genre_action">Action</string>
    <string name="genre_action_adventure"><![CDATA[Action & Adventure]]></string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_kids">Kids</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_news">News</string>
    <string name="genre_reality">Reality</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_scifi_fantasy"><![CDATA[Sci-Fi & Fantasy]]></string>
    <string name="genre_soap">Soap</string>
    <string name="genre_talk">Talk</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_war_politics"><![CDATA[War & Politics]]></string>
    <string name="genre_western">Western</string>

    <string name="search_query_hint">Search movie, TV show or person</string>

    <string name="select_region">Select a region</string>
    <string name="argentina">Argentina,AR</string>
    <string name="australia">Australia,AU</string>
    <string name="austria">Austria,AT</string>
    <string name="azerbaijan">Azerbaijan,Az</string>
    <string name="bangladesh">Bangladesh,BG</string>
    <string name="belgium">Belgium,BE</string>
    <string name="brazil">Brazil,BR</string>
    <string name="bulgaria">Bulgaria,BG</string>
    <string name="cambodia">Cambodia,KH</string>
    <string name="canada">Canada,CA</string>
    <string name="china">China,CN</string>
    <string name="costa_rica">Costa Rica,CR</string>
    <string name="croatia">Croatia,HR</string>
    <string name="czechia">Czechia,CZ</string>
    <string name="denmark">Denmark,DK</string>
    <string name="egypt">Egypt,EG</string>
    <string name="estonia">Estonia,EE</string>
    <string name="finland">Finland,FI</string>
    <string name="france">France,FR</string>
    <string name="germany">Germany,DE</string>
    <string name="greece">Greece,GR</string>
    <string name="hong_kong">Hong Kong,HK</string>
    <string name="hungary">Hungary,HU</string>
    <string name="iceland">Iceland,IS</string>
    <string name="india">India,IN</string>
    <string name="indonesia">Indonesia,ID</string>
    <string name="iran">Iran,IR</string>
    <string name="ireland">Ireland,IE</string>
    <string name="israel">Israel,IL</string>
    <string name="italy">Italy,IT</string>
    <string name="japan">Japan,JP</string>
    <string name="latvia">Latvia,LV</string>
    <string name="lebanon">Lebanon,LB</string>
    <string name="liberia">Liberia,LR</string>
    <string name="lithuania">Lithuania,LT</string>
    <string name="malaysia">Malaysia,MY</string>
    <string name="mexico">Mexico,MX</string>
    <string name="mongolia">Mongolia,MN</string>
    <string name="morocco">Morocco,MA</string>
    <string name="nepal">Nepal,NP</string>
    <string name="netherlands">Netherlands,NL</string>
    <string name="new_zealand">New Zealand,NZ</string>
    <string name="norway">Norway,NO</string>
    <string name="pakistan">Pakistan,PK</string>
    <string name="peru">Peru,PE</string>
    <string name="philippines">Philippines,PH</string>
    <string name="poland">Poland,PL</string>
    <string name="portugal">Portugal,PT</string>
    <string name="puerto_rico">Puerto Rico,PR</string>
    <string name="romania">Romania,RO</string>
    <string name="russia">Russia,RU</string>
    <string name="singapore">Singapore,SG</string>
    <string name="slovakia">Slovakia,SK</string>
    <string name="south_korea">South Korea,KR</string>
    <string name="spain">Spain,ES</string>
    <string name="sweden">Sweden,SE</string>
    <string name="switzerland">Switzerland,CH</string>
    <string name="taiwan">Taiwan,TW</string>
    <string name="thailand">Thailand,TH</string>
    <string name="turkey">Turkey,TR</string>
    <string name="ukraine">Ukraine,UA</string>
    <string name="united_arab_emirates">United Arab Emirates,AE</string>
    <string name="united_kingdom">United Kingdom,GB</string>
    <string name="united_states">United States,US</string>
    <string name="uruguay">Uruguay,UY</string>
    <string name="vietnam">Vietnam,VN</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="download">Download</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="englishLocale">English</string>
    <string name="indonesiaLocale">Indonesian</string>

    <string name="follow_system">Follow system</string>
    <string name="unavilable">Unavailable Feature</string>
    <string name="grant">Grant Permission</string>
    <string name="cancel">Cancel</string>
    <string name="permission_needed">Permission needed</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>