<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.pinto.mymovieappkt.utils.Content" />

        <variable
            name="fragment"
            type="com.pinto.mymovieappkt.presentation.screen.setting.SettingsFragment" />

        <variable
            name="viewModel"
            type="com.pinto.mymovieappkt.presentation.screen.setting.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screen.setting.SettingsFragment">

<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:indeterminate="true"-->
<!--            android:indeterminateTint="?attr/colorPrimary"-->

<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/start_margin_small">

                <androidx.cardview.widget.CardView
                    android:id="@+id/theme_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/theme_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:text="@string/theme"
                            android:textColor="@color/material_on_surface_emphasis_high_type"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                            app:drawableStartCompat="@drawable/ic_theme" />

                        <RadioGroup
                            android:id="@+id/theme_radio_group"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:tag="@string/settings"
                            android:visibility="gone">

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/light_radio_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/light"
                                app:useMaterialThemeColors="true" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/dark_radio_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dark"
                                app:useMaterialThemeColors="true" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/language_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/theme_card_view">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:drawablePadding="8dp"
                            android:text="@string/language"
                            android:textColor="@color/material_on_surface_emphasis_high_type"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/ic_language" />

                        <TextView
                            android:id="@+id/language_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/englishLocale"
                            android:textColor="@color/material_on_surface_emphasis_medium"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>