<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.pinto.mymovieappkt.utils.Constants" />

        <import type="com.pinto.mymovieappkt.utils.Content" />

        <import type="com.pinto.mymovieappkt.utils.Detail" />

        <variable
            name="fragment"
            type="com.pinto.mymovieappkt.presentation.screen.home.movie_explore.MovieExploreFragment" />

        <variable
            name="viewModel"
            type="com.pinto.mymovieappkt.presentation.screen.home.movie_explore.MovieExploreViewModel" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screen.home.movie_explore.MovieExploreFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            isVisible="@{viewModel.uiState.success}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bottom_margin_large">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpTrendings"
                        isNested="@{true}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        style="@style/TitleParent"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/top_margin"
                        android:layout_marginBottom="1dp"
                        app:cardCornerRadius="24dp">

                        <TextView
                            style="@style/Title"
                            transparentBackground="@{@color/day_night_inverse}"
                            android:paddingStart="8dp"
                            android:paddingTop="2dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="2dp"
                            android:text="@string/title_trending" />

                    </androidx.cardview.widget.CardView>

                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/TitleParent">

                    <TextView
                        style="@style/TitleDayNight"
                        android:text="@string/title_popular_movies"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/SeeAll"
                        contentType="@{Content.EXPLORE_LIST}"
                        seeAllDetailType="@{Detail.MOVIE}"
                        stringId="@{Constants.LIST_ID_POPULAR}"
                        title="@{@string/title_popular_movies}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopular"
                    style="@style/hRecyclerView"
                    fixedSize="@{true}"
                    isNested="@{true}"
                    loadMore="@{viewModel::onLoadMore}"
                    shouldLoadMore="@{true}"
                    type="@{Constants.LIST_ID_POPULAR}" />

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/TitleParent">

                    <TextView
                        style="@style/TitleDayNight"
                        android:text="@string/title_top_rated_movies"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/SeeAll"
                        contentType="@{Content.EXPLORE_LIST}"
                        seeAllDetailType="@{Detail.MOVIE}"
                        stringId="@{Constants.LIST_ID_TOP_RATED}"
                        title="@{@string/title_top_rated_movies}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopRated"
                    style="@style/hRecyclerView"
                    fixedSize="@{true}"
                    isNested="@{true}"
                    loadMore="@{viewModel::onLoadMore}"
                    shouldLoadMore="@{true}"
                    type="@{Constants.LIST_ID_TOP_RATED}" />

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/TitleParent">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TitleDayNight"
                        android:text="@string/title_in_theatres"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        style="@style/SpinnerParent"
                        android:layout_width="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView2"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteY="1dp">

                        <Spinner
                            android:id="@+id/spNowPlaying"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:spinnerMode="dialog" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/SeeAll"
                        contentType="@{Content.EXPLORE_LIST}"
                        isVisible="@{viewModel.nowPlayingMovies.size > 3}"
                        region="@{viewModel.countyCode}"
                        seeAllDetailType="@{Detail.MOVIE}"
                        stringId="@{Constants.LIST_ID_NOW_PLAYING}"
                        title="@{@string/title_in_theatres + @string/item_count_s(viewModel.countryName)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNowPlaying"
                    style="@style/hRecyclerView"
                    fixedSize="@{true}"
                    isNested="@{true}"
                    loadMore="@{viewModel::onLoadMore}"
                    shouldLoadMore="@{true}"
                    type="@{Constants.LIST_ID_NOW_PLAYING}" />

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/TitleParent">

                    <TextView
                        style="@style/TitleDayNight"
                        android:text="@string/title_upcoming_movies"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/SeeAll"
                        contentType="@{Content.EXPLORE_LIST}"
                        seeAllDetailType="@{Detail.MOVIE}"
                        stringId="@{Constants.LIST_ID_UPCOMING}"
                        title="@{@string/title_upcoming_movies}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvUpcoming"
                    style="@style/hRecyclerView"
                    fixedSize="@{true}"
                    isNested="@{true}"
                    loadMore="@{viewModel::onLoadMore}"
                    shouldLoadMore="@{true}"
                    type="@{Constants.LIST_ID_UPCOMING}" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            style="@style/Loading"
            isVisible="@{viewModel.uiState.loading}" />

    </FrameLayout>
</layout>